--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
   display: flex;
   overflow: hidden;
+  font-family: "Caveat", cursive, Arial, Helvetica, sans-serif;
 }
 
 img {
@@ -37,6 +37,7 @@ div.form-container {
   padding-left: 48px;
   padding-right: 100px;
   padding-bottom: 72px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 form {
@@ -69,7 +70,7 @@ form div.input-fields {
 form div.form-row {
   display: flex;
   flex-direction: row;
-  gap: 60px;
+  gap: 150px;
   margin-left: 24px;
 }
 
@@ -108,4 +109,30 @@ form button {
 
 form button:hover {
   cursor: pointer;
+}
+
+div.logo-container {
+  background-color: rgba(0, 0, 0, 0.308);
+  padding: 50px;
+  position: absolute;
+  min-width: 50%;
+  top: 300px;
+  font-weight: bolder;
+  font-size: 5rem;
+  text-align: center;
+  color: white;
+  font-family: "Caveat", cursive, Arial, Helvetica, sans-serif;
+}
+
+div.image-credit {
+  position: absolute;
+  width: 50%;
+  color: white;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  bottom: 5px;
+}
+
+a {
+  color: white;
 }
