--- a/styles.css
+++ b/styles.css
@@ -4,30 +4,36 @@
   box-sizing: border-box;
 }
 
+:root {
+  --image-width: max(0px, calc(50% - 300px));
+}
+
 body {
   display: flex;
-  overflow: hidden;
   font-family: "Caveat", cursive, Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+.image-holder {
+  overflow: hidden;
 }
 
 img {
   display: block;
   max-width: 2000px;
   height: auto;
-  margin-bottom: 0px;
   position: absolute;
   left: 0;
   z-index: -1;
-  
 }
 
 div.form-container {
-  position: relative;
   background-color: #f7f7f7;
-  width: 50%;
+  width: calc(100% - var(--image-width));
   padding: 0;
   margin-left: auto;
   height: 100vh;
+  overflow-y: auto;
 }
 
 .form-container > div.propaganda {
@@ -41,10 +47,6 @@ div.form-container {
 }
 
 form {
-  position: absolute;
-  left: 0;
-  margin-top: auto;
-  margin-bottom: auto;
   width: 100%;
 }
 
@@ -72,6 +74,9 @@ form div.form-row {
   flex-direction: row;
   gap: 150px;
   margin-left: 24px;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  align-items: fle;
 }
 
 form div.data-field {
@@ -96,6 +101,12 @@ form input:focus {
   box-shadow: 1px 1px 3px #999;
 }
 
+form input:invalid {
+  outline: none;
+  border-color: red;
+  box-shadow: 1px 1px 3px #999;
+}
+
 form button {
   margin-left: 44px;
   background-color: #a3a4b9;
@@ -115,7 +126,9 @@ div.logo-container {
   background-color: rgba(0, 0, 0, 0.308);
   padding: 50px;
   position: absolute;
-  min-width: 50%;
+  max-width: var(--image-width);
+  min-width: var(--image-width);
+  z-index: -1;
   top: 300px;
   font-weight: bolder;
   font-size: 5rem;
@@ -126,11 +139,13 @@ div.logo-container {
 
 div.image-credit {
   position: absolute;
-  width: 50%;
+  max-width: var(--image-width);
+  min-width: var(--image-width);;
   color: white;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   bottom: 5px;
+  z-index: -1;
 }
 
 a {
